trying to fix alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,5 +24,5 @@
     text-align: left;
     display: inline-block;
     vertical-align: top;
-    width: 100%;
+    margin: 1% 1%;
 }
